# OpenGL_Tatooine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: BabyYoda.hpp  CameraAnimation.hpp  ColoredModel.hpp  Model.hpp  Sun.hpp  fog.hpp  lights.hpp  shadow.hpp  util.hpp  view_mode.hpp
app/src/: BabyYoda.cpp  CameraAnimation.cpp  ColoredModel.cpp  Model.cpp  Sun.cpp  fog.cpp  lights.cpp  main.cpp  shadow.cpp  util.cpp  view_mode.cpp
doc/: documentation.tex
doc/tex/: algorithms.tex  classes.tex  conclusion.tex  data_struct.tex  functionalities.tex  graphics_model.tex  implementation.tex  introduction.tex  manual.tex  scenario.tex  scene.tex
libs/: CMakeLists.txt
libs/gps/: CMakeLists.txt
libs/gps/include/: BoundingBox.hpp  Camera.hpp  Model3D.hpp  Shader.hpp
libs/gps/src/: BoundingBox.cpp  Camera.cpp  Mesh.cpp  Model3D.cpp  Shader.cpp  Window.cpp
libs/stb_image/: CMakeLists.txt
libs/tiny_obj_loader/: CMakeLists.txt
libs/tiny_obj_loader/src/: tiny_obj_loader.cpp
models/baby_yoda/: baby_yoda.mtl
models/firefly/: firefly.blend  firefly.mtl
models/light/: light.mtl
models/scene/: scene.blend  scene.blend1  scene.mtl
models/scene/textures/: tmp0qylhl5a  tmp10rpajtq  tmp15hpkohu  tmp32bidjib  tmp4jxtof8p  tmp6fsp5ssw  tmp_3v4wce6  tmp_d3laosg  tmpa7uu70v0  tmpao0n7863  tmpgzvvk199  tmph_lc2fxg  tmphsvs0ej_  tmpiftv8ap0  tmpmed_03_i  tmpmvs7s_aa  tmpnibbfnlj  tmprpcxd2k5  tmprqn1abc0  tmpxr96rons  tmpzq7b84c_
models/ship/: ship.mtl  tmp6y__0ton  tmptueuliad
models/sun/: sun.mtl
shaders/: basic.frag  basic.geom  basic.vert  depthMapShader.vert  simple.vert  simpleTex.frag  simpleTex.vert  uniformColor.frag
textures/skybox/: left.tga  top.tga
textures/skybox-day/: back.tga  bottom.tga  front.tga  right.tga
